Adjusted contrast for month labels, fixed stylesheet link in example pages.

--- a/timegrid/trunk/src/webapp/api/styles/timegrid.css
+++ b/timegrid/trunk/src/webapp/api/styles/timegrid.css
@@ -157,7 +157,7 @@ div.timegrid-month-label span {
     margin-top: 25%;
     display: block;
     font-size: 5em;
-    color: #aaa;
+    color: #ccc;
 }
 
 span.timegrid-month-date-label {
